--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -100,19 +100,10 @@ body {
 }
 
 body {
-    background-image: linear-gradient(45deg, var(--bs-pink), var(--bs-green), var(--bs-purple));
-    background-size: cover;
-    background-repeat: no-repeat;
+    background: linear-gradient(45deg, var(--bs-pink), var(--bs-green), var(--bs-purple));
+    min-height: 100vh;
 }
 
-main {
-    width: 95%;
-    margin: 0 auto;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-
-}
 
 /* navbar */
 nav {
@@ -183,8 +174,8 @@ h1.brand {
     background: none;
     border: 0;
 }
-
-.nav-item a .profile-image {
+ 
+.navbar .nav-item a .profile-image {
     width: 25px;
     height: 25px;
     object-fit: cover;
@@ -207,9 +198,6 @@ h1.brand {
     color: var(--bs-white);
 }
 
-/* .trans-text {
-    opacity: 0.7;
-} */
 
 .trans-text:hover {
     color: var(--bs-baby-blue);
