--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="app-container mt-5">
     <h1 class="main-title-text mb-3">My Wishlist</h1>
-    <a href="{% url 'add_wishlist_item' %}" class="btn btn-rounded btn-log mb-3">Add to Wishlist</a>
+    <a href="{% url 'wishlist:add_wishlist_item' %}" class="btn btn-rounded btn-primary btn-log mb-3" action="{% url 'wishlist:add_wishlist_item' %}">Add an item to my wishlist</a>
     <div class="scrollable-container" style=" overflow-y: auto; border: 1px solid #ccc; padding: 10px;">
         <ul class="list-group">
             {% for item in wishlist_items %}
@@ -22,11 +22,8 @@
                     <p>{{ item.description }}</p>
                 <a href="{{ item.link }}" target="_blank">{{ item.link|slice:":65" }}{% if item.link|length > 50 %}...{% endif %}</a>
                 <div class="mt-2">
-                    <a href="{% url 'edit_wishlist_item' item.id %}" class="btn btn-baby-blue btn-warning btn-sm">Edit</a>
-                    <form method="post" action="{% url 'delete_wishlist_item' item.id %}" style="display:inline;">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-rounded btn-danger btn-sm">Delete</button>
-                    </form>
+                    <a href="{% url 'wishlist:edit_wishlist_item' item.id %}" class="btn btn-baby-blue btn-warning btn-sm">Edit</a>
+                    <a href="{% url 'wishlist:delete_wishlist_item' item.id %}" class="btn btn-rounded btn-danger btn-sm">Delete</a>
                 </div>
             </li>
             {% endfor %}
