--- a/friendslist/templates/friendslist/frienddetail.html
+++ b/friendslist/templates/friendslist/frienddetail.html
@@ -14,9 +14,9 @@
                     <div class="col-md-12 mb-3">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">{{ event.event_name }}</h5>
+                                <h5 class="card-title">{{ event.title }}</h5>
                                 <p class="card-text">{{ event.description }}</p>
-                                <p class="card-text"><small class="text-muted">{{ event.event_date }} - {{ event.event_time }}</small></p>
+                                <p class="card-text"><small class="text-muted">{{ event.start }} - {{ event.end }}</small></p>
                             </div>
                         </div>
                     </div>
