--- a/planner/templates/planner/add_event.html
+++ b/planner/templates/planner/add_event.html
@@ -9,12 +9,12 @@
     <!-- <form method="post" id="planner-form" class="d-flex flex-column">
         {% csrf_token %}
         <div class="d-flex mb-3">
-            {{ form.event_name|as_crispy_field }}
+            {{ form.title|as_crispy_field }}
             {{ form.description|as_crispy_field }}
         </div>
         <div class="d-flex mb-3 align-items-end">
-            {{ form.event_date|as_crispy_field }}
-            {{ form.event_time|as_crispy_field }}
+            {{ form.start|as_crispy_field }}
+            {{ form.end|as_crispy_field }}
             <button type="submit" class="btn btn-primary ml-2 no-margin">Add Event</button>
         </div>
     </form> -->
