--- a/planner/templates/planner/delete_event.html
+++ b/planner/templates/planner/delete_event.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h1>Delete Event</h1>
     
-    <p>Are you sure you want to delete "{{ event.event_name }}"" on {{ event.event_date }}?</p>
+    <p>Are you sure you want to delete "{{ event.title }}"" on {{ event.start }}?</p>
     <!-- <form method="post" action="{% url 'planner:delete_event' event.id %}">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
