--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 
@@ -8,11 +9,11 @@
     <meta name="description" content="Gift Genie, your ultimate gift wishlist platform.">
     <title>Gift Genie</title>
     <!-- Bootstrap 5.3.3 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <!-- Bootswatch theme - quartz -->
     <link rel="stylesheet" href="https://bootswatch.com/5/quartz/bootstrap.min.css">
     <!-- FullCalendar CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css" rel="stylesheet">
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/645226beaa.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
@@ -22,6 +23,11 @@
     <!-- Custom CSS-->
     <link rel="stylesheet" href="{% static 'css/styles1.css' %}" />
     <link rel="stylesheet" href="{% static 'css/giftbox.css' %}" />
+    <!-- favicon.io -->
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
 </head>
 
 <body class="{% if request.COOKIES.dark_mode == 'true' %}dark-mode{% endif %}">
@@ -82,8 +88,17 @@
         {% block content %}{% endblock %}
     </div>
 
+    <footer>
+
+    </footer>
+<!-- Toggle Light/Dark theme JS -->
     <script src="{% static 'js/theme-toggle.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap 5.3.3 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- FullCalendar JS -->
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
+    <!-- Additional scripts -->
+    {% block scripts %}{% endblock %}
 </body>
 
 </html>
