--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load allauth i18n %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
     {% trans "Signup" %}
@@ -24,12 +25,11 @@
         {% element form form=form method="post" action=action_url tags="entrance,signup" %}
             {% slot body %}
                 {% csrf_token %}
-                {% element fields form=form unlabeled=True %}
-                {% endelement %}
+                {{ form|crispy }}
                 {{ redirect_field }}
             {% endslot %}
             {% slot actions %}
-            <button type="submit" class="btn btn-log btn-rounded">
+            <button type="submit" class="btn btn-primary mb-3 btn-rounded">
                     {% trans "Sign Up" %}
             </button>
             {% endslot %}
