--- a/static/css/styles1.css
+++ b/static/css/styles1.css
@@ -89,8 +89,6 @@
 body {
     background: linear-gradient(45deg, var(--bs-pink), var(--bs-green), var(--bs-purple));
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
 }
 
 /* Dark Mode Background */
@@ -161,6 +159,23 @@ body {
     transform: scale(1.1);
 }
 
+.animated-text {
+    font-size: 2rem;
+    color: #fff;
+    animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
+}
 
 /* Planner */
 
