--- a/staticfiles/css/currentstyles.css
+++ b/staticfiles/css/currentstyles.css
@@ -101,10 +101,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(45deg, var(--bs-pink), var(--bs-green), var(--bs-purple));
-    background-size: cover;
-    background-repeat: no-repeat;
-}
+    background: linear-gradient(45deg, var(--bs-pink), var(--bs-green), var(--bs-purple));
+   }
 
 body.menu-open {
     overflow: hidden;
