--- a/templates/index.html
+++ b/templates/index.html
@@ -2,22 +2,30 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <h3 class="text-center text-light my-5"><strong>Hover the box</strong></h3>
-        </div>
-        <div class="col-12 mt-5 d-flex justify-content-center">
-            <div class="box">
-                <div class="box-body">
-                    <div class="box-lid">
-                        <div class="box-bowtie"></div>
-                    </div>
-                    <div class="call-to-action-container">
-                        <div class="call-to-action">Start your giving journey</div>
-                    </div>
+<div class="container-fluid min-vh-100 d-flex flex-column justify-content-center align-items-center bg-gradient-light">
+    <!-- Animated Title -->
+    <h1 class="display-1 fw-bold text-center text-primary animate-float">
+        Gift Genie
+    </h1>
+
+    <!-- Subtitle -->
+    <p class="mt-4 fs-4 text-center text-white animate-pulse">
+        Start your gift-giving journey today!
+    </p>
+
+    <!-- Call-to-Action Button -->
+    <a href="{% url 'account_login' %}" class="mt-5 btn btn-lg btn-light text-primary fw-bold rounded-pill animate-pulse">
+        Get Started
+    </a>
+
+    <div class="gift-container">
+        <div class="shadow"></div>
+        <div class="gift-box">
+            <div class="click">
+                <div class="box-bowtie">
                 </div>
             </div>
+            <div class="surprise"></div>
         </div>
     </div>
 </div>
