--- a/staticfiles/css/gift-box.css
+++ b/staticfiles/css/gift-box.css
@@ -1,12 +1,3 @@
-/* body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(45deg, #e83283, #41d7a7, #686dc3);
-    min-height: 100vh;
-    margin: 0;
-} */
-
 .gift-container {
     display: flex;
     justify-content: center;
@@ -45,11 +36,11 @@
     position: relative;
     height: 200px;
     width: 300px;
-    top: 150px;
     background: linear-gradient(180deg, #e83283, #fc346f);
     border-bottom-left-radius: 5%;
     border-bottom-right-radius: 5%;
     animation: Bounce 4s ease infinite forwards;
+    z-index: 2;
 }
 
 .gift-box.active {
@@ -72,18 +63,16 @@
 
 .gift-container .shadow {
     content: '';
-    position: absolute;
+    position: relative;
     width: 300px;
     height: 40px;
     background: rgba(0, 0, 0, .4);
-    top: 335px;
+    top: 200px;
+    left: 50%;
+    transform: translateX(-50%);
     border-radius: 50%;
-    left: 0px;
     animation: BounceOut 4s ease infinite forwards;
-}
-
-.gift-container .shadow.active {
-    animation: none;
+    z-index: 1;
 }
 
 @keyframes BounceOut {
@@ -104,6 +93,10 @@
         opacity: 0.7;
         filter: blur(1px);
     }
+}
+
+.gift-container .shadow.active {
+    animation: none;
 }
 
 /* Box ribbon */
@@ -136,7 +129,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     top: -80px;
     left: -7px;
-    z-index: 1;
+    z-index: 2;
     transition: .5s ease;
 }
 
